fix: change images src, make center align

--- a/lab1-2/custom-styles.css
+++ b/lab1-2/custom-styles.css
@@ -59,6 +59,12 @@
     white-space:nowrap;
 }
 
+.image-container {
+    display: inline-block;
+    vertical-align: middle;
+    padding: 20px 20px;
+}
+
 .image {
     padding: 10px;
     max-height: 400px;
