--- a/lab1-2/styles.css
+++ b/lab1-2/styles.css
@@ -69,5 +69,9 @@ footer > pre {
     text-align: left;
 }
 
+img {
+    border-radius: 6px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
 
 
